// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render textinput 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 14,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityLabel=""
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#72727260"
          status="default"
          style={
            [
              {
                "borderWidth": 0,
                "color": "#444444",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 15,
                "minHeight": 37.714285714285715,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {},
            ]
          }
          testID="test"
          textAlign="left"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render textinput with error 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      error={true}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 14,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityLabel=""
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#72727260"
          status="danger"
          style={
            [
              {
                "borderWidth": 0,
                "color": "#FF4F3F",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 15,
                "minHeight": 37.714285714285715,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {},
            ]
          }
          testID="test"
          textAlign="left"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel="Erro Some error occurred"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
        {},
      ]
    }
    testID="error_test"
    variant="xs"
  >
    Some error occurred
  </Text>
</View>
`;

exports[`<TextInput /> should render with bottom line 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 14,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityLabel=""
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#72727260"
          status="default"
          style={
            [
              {
                "borderWidth": 0,
                "color": "#444444",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 15,
                "minHeight": 37.714285714285715,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {},
            ]
          }
          testID="test"
          textAlign="left"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with props 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={true}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <View
        multiline={true}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityLabel=""
          allowFontScaling={false}
          autoFocus={true}
          centered={true}
          contrast={true}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={true}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder="Enter your name"
          placeholderTextColor="#72727260"
          status="default"
          style={
            [
              {
                "borderWidth": 0,
                "color": "#ffffff",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 17,
                "minHeight": 37.714285714285715,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {},
            ]
          }
          testID="test"
          textAlign="center"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="lg"
          withBottomline={true}
        />
      </View>
      <View
        contrast={true}
        status="default"
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render without bottom line 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 14,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityLabel=""
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#72727260"
          status="default"
          style={
            [
              {
                "borderWidth": 0,
                "color": "#444444",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 15,
                "minHeight": 37.714285714285715,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              {},
            ]
          }
          testID="test"
          textAlign="left"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={false}
        />
      </View>
    </View>
  </View>
</View>
`;
